Possibility to add a directory to the dirs list #15

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -697,6 +697,11 @@
        <property name="editable">
         <bool>false</bool>
        </property>
+       <item>
+        <property name="text">
+         <string>Add directory</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item>
